--- a/frontend/src/styles/custom.css
+++ b/frontend/src/styles/custom.css
@@ -21,18 +21,19 @@
   padding: 8px;
 }
 
-/* Asterisco rojo para campos obligatorios */
-.required-asterisk::after {
-content: '*';
-color: red;
-font-size: 1rem;
-position: absolute;
-top: 0;
-right: -1px;
+.custom-button {
+  background-color: #2c2c2c;
+  border: none;
+  border-radius: 0.75rem;
+  padding: 8px 16px;
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  font-size: 0.9rem;
+  font-weight: bold;
 }
 
-/* Contenedor del label para posicionar el asterisco */
-.form-label.required {
-position: relative;
-padding-right: 15px; /* Espacio para el asterisco */
+.text-end {
+  display: flex;
+  justify-content: flex-end;
 }
