--- a/frontend/src/styles/mantenimientos.css
+++ b/frontend/src/styles/mantenimientos.css
@@ -373,6 +373,7 @@ margin-top: 0.5rem;
   color: #000000 !important;
 }
 
+
 .gallery-section {
   display: flex;
   flex-wrap: wrap;
@@ -412,6 +413,7 @@ margin-top: 0.5rem;
   align-items: center;
   justify-content: center;
 }
+
 
 .photo-container.selectable {
   cursor: pointer;
@@ -461,7 +463,7 @@ margin-top: 0.5rem;
 .floating-save-btn {
   position: fixed;
   right: 0.5rem;
-  bottom: 4rem;
+  bottom: 9.5rem;
   background-color: #ffc720;
   color: white;
   border: none;
@@ -476,49 +478,7 @@ margin-top: 0.5rem;
 }
 
 .floating-save-btn:hover {
-  background-color: #00ff15;
-}
-
-.floating-back-btn {
-  position: fixed;
-  right: 0.5rem;
-  bottom: 8.5rem;
-  background-color: #ffc720;
-  border: none;
-  border-radius: 50% !important;
-  width: 60px;
-  height: 60px;
-  font-size: 40px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  box-shadow: 0 4px 8px rgba(0,0,0,0.3);
-  cursor: pointer;
-  z-index: 1000;
-  transition: background-color 0.3s ease;
-}
-
-.floating-chat-btn {
-  position: fixed;
-  right: 0.5rem;
-  bottom: 13rem;
-  background-color: #ffc720;
-  border: none;
-  border-radius: 50% !important;
-  width: 60px;
-  height: 60px;
-  font-size: 40px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  box-shadow: 0 4px 8px rgba(0,0,0,0.3);
-  cursor: pointer;
-  z-index: 1000;
-  transition: background-color 0.3s ease;
-}
-
-.floating-back-btn:hover {
-  background-color: #ff0505;
+  background-color: #2c2c2c;
 }
 
 .icon-button {
@@ -564,20 +524,9 @@ margin-top: 0.5rem;
   .planilla-button {
     max-width: 100%;
   }
-}
 
-/* botones en pantallas de telefono */
-@media (max-width: 398px) {
   .floating-save-btn {
     margin-bottom: 1.5rem;
-  }
-
-  .floating-back-btn {
-    margin-bottom: 1.3rem;
-  }
-
-  .floating-chat-btn {
-    margin-bottom: 1.1rem;
   }
 }
 
