--- a/frontend/src/styles/mantenimientos.css
+++ b/frontend/src/styles/mantenimientos.css
@@ -274,6 +274,7 @@ margin-top: 0.5rem;
 
 /* Título de la sección de planilla */
 .planilla-section-title {
+  text-align: center;   
   margin-bottom: 1rem;
 }
 
@@ -399,8 +400,8 @@ margin-top: 0.5rem;
 .gallery-thumbnail {
   max-width: 100%;
   max-height: 200px; /* para que las grandes no se desborden */
-  min-width: 120px;  /* asegura que las chicas no se achiquen demasiado */
-  min-height: 120px;
+  min-width: 180px;  /* asegura que las chicas no se achiquen demasiado */
+  min-height: 180px;
   object-fit: contain;
   border: 1px solid #ddd;
   border-radius: 8px;
